--- a/public/partials/step5.ejs
+++ b/public/partials/step5.ejs
@@ -11,3 +11,4 @@
     Section</button>
   <div id="investment-container" class="section-container"></div>
 </div>
+<div class="md-12 px-3 mt-2"></div>
