adjusted some margins on the bottoms and bottom of input groups in the summary section added note on step 5 to let the user know they have to generate json first

--- a/public/partials/step3.ejs
+++ b/public/partials/step3.ejs
@@ -41,7 +41,7 @@
     </div>
 
     <!-- Repeat for Problem, Solution, and Value -->
-    <div class="card nested-section summary-section mb-2" data-section="Problem">
+    <div class="card nested-section summary-section" data-section="Problem">
       <div class="input-group p-2">
         <div class="dropdown">
           <button class="btn btn-outline-secondary dropdown-toggle" type="button"
@@ -107,7 +107,7 @@
     </div>
 
     <!-- Repeat for Problem, Solution, and Value -->
-    <div class="card nested-section summary-section mb-2" data-section="Value">
+    <div class="card nested-section summary-section" data-section="Value">
       <div class="input-group p-2">
         <div class="dropdown">
           <button class="btn btn-outline-secondary dropdown-toggle" type="button"
