--- a/public/partials/step5.ejs
+++ b/public/partials/step5.ejs
@@ -11,4 +11,6 @@
     Section</button>
   <div id="investment-container" class="section-container"></div>
 </div>
-<div class="md-12 px-3 mt-2"></div>
+<div class="md-12 px-3 mt-3 alert alert-warning">
+  The <b>Generate PDF</b> button will not be active until you first generate your <b>JSON File</b>.
+</div>
