moved alert warning to the top of the page

--- a/public/partials/step5.ejs
+++ b/public/partials/step5.ejs
@@ -1,4 +1,8 @@
 <!-- Dynamic Investment Section -->
+<div class="md-12 px-3 alert alert-warning alert-dismissible fade show">
+  The <b>Generate PDF</b> button will not be active until you first generate your <b>JSON File</b>.
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
 <h2 class="mt-4 mb-3">Investment</h2>
 <div class="md-12 px-3 mb-2">
   <p><i class="bi bi-lightbulb-fill text-warning"></i> Tip:</p>
@@ -10,7 +14,4 @@
   <button type="button" class="btn btn-primary mb-3" onclick="addInvestSection()">Add Investment
     Section</button>
   <div id="investment-container" class="section-container"></div>
-</div>
-<div class="md-12 px-3 mt-3 alert alert-warning">
-  The <b>Generate PDF</b> button will not be active until you first generate your <b>JSON File</b>.
 </div>
