--- a/public/partials/sectionTmpls.ejs
+++ b/public/partials/sectionTmpls.ejs
@@ -6,6 +6,12 @@
         <input type="text" name="equipRoomName" placeholder="Room Name" class="form-control" required />
         <button type="button" class="btn btn-primary" onclick="addEquipItem(this)">Add Item</button>
         <button type="button" class="btn btn-danger" onclick="this.closest('.equip-room').remove()">Remove Room</button>
+        <div class="form-check mx-2 mt-2 new-page-toggle" style="display: none;">
+          <input class="form-check-input" type="checkbox" name="equipNewPage" />
+          <label class="form-check-label">
+            New Page
+          </label>
+        </div>
       </div>
       <div class="equip-items"></div>
     </div>
