+ Added Schedule of Values checkbox to select whether the page should be included or not

--- a/public/partials/step1.ejs
+++ b/public/partials/step1.ejs
@@ -70,6 +70,10 @@
           <input type="checkbox" class="form-check-input" id="serviceBool" name="serviceBool" checked />
           <label for="serviceBool" class="form-check-label">Include Service Section</label>
         </div>
+        <div class="form-check">
+          <input type="checkbox" class="form-check-input" id="sovBool" name="sovBool" checked />
+          <label for="sovBool" class="form-check-label">Include Schedule of Values Section</label>
+        </div>
       </div>
       <div class="col-md-6">
         <label for="checkbox" class="form-label">Select Contracts</label>
