--- a/public/partials/head.ejs
+++ b/public/partials/head.ejs
@@ -15,4 +15,5 @@
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">-->
+<link rel="icon" sizes="32x32" href="/favicon32x32.png" type="image/png">
 <link rel="stylesheet" href="helpers/style.css">
