--- a/public/partials/head.ejs
+++ b/public/partials/head.ejs
@@ -16,4 +16,5 @@
 
 <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@latest/css/pico.min.css">-->
 <link rel="icon" sizes="32x32" href="/favicon32x32.png" type="image/png">
+<link rel="icon" sizes="16x16" href="/favicon16x16.png" type="image/png">
 <link rel="stylesheet" href="helpers/style.css">
